app/components/Modal.css
.modal-overlay {
    position: fixed;
    z-index: 10;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(2px) brightness(60%);

    & .modal-x {
        position: absolute;
        top: 10px;
        right: 10px;
        z-index: 12;
        background-image: url("/close-x.svg");
        background-size: contain;
        background-position: center;
        background-repeat: no-repeat;
        width: 2rem;
        height: 2rem;
        filter: invert(1);
        cursor: pointer;

        &:hover {
            filter: invert(1) brightness(80%);
        }
    }

    & .modal {
        position: absolute;
        z-index: 11;
        top: 50%;
        left: 49.5%;
        translate: -50% -50%;
        max-width: 70%;
    }
}

@media (max-width: 1000px) {
    & .modal-overlay {
        & .modal {
            min-width: 70%;
        }
    }
}

@media (max-width: 600px) {
    & .modal-overlay {
        & .modal {
            min-width: 85%;
        }
    }
}

